[package]
authors = ["Bss Foundation <bssinc@mail.ir>"]
description = "Fetch program for linux written in rust"
edition = "2021"
name = "bfetch"
readme = "README.md"
version = "0.1.0"
license="GPL3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.0.1"
chrono = "0.4.19"
clap = "2.33.3"
colored = "2"
humantime = "2.1.0"
isolang = "2.2.0"
minreq = "2.3.1"
nix = "0.20.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.7.0"
